# xin

appimage/: build.sh
audio/: CMakeLists.txt
audio/include/audio/: audio.h  iaudiocontrol.h  iaudiosettings.h  iaudiosink.h  iaudiosource.h
audio/src/: audio.cpp  iaudiosettings.cpp  iaudiosink.cpp
audio/src/backend/: alsink.cpp  alsink.h  alsource.cpp  alsource.h  openal.cpp  openal.h
